[gd_scene load_steps=6 format=3 uid="uid://cqkrmdxlwvvqk"]

[ext_resource type="Texture2D" uid="uid://bn6xsggbhlbvi" path="res://_assets/images/SeedBank.png" id="1_slpqo"]
[ext_resource type="Script" path="res://ui/seed_bank/seed_bank.gd" id="1_xapnq"]
[ext_resource type="PackedScene" uid="uid://bt4e0ovapeqr" path="res://_abilities/inventory_abilities/inventory_basic_ability.tscn" id="2_vufyr"]
[ext_resource type="PackedScene" uid="uid://u2oqdoouqch0" path="res://inventory/item_slot/seed_packet_slot.tscn" id="4_tpi5q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1h3mi"]
texture = ExtResource("1_slpqo")
texture_margin_left = 100.0
texture_margin_top = 10.0
texture_margin_right = 40.0
texture_margin_bottom = 10.0

[node name="SeedBank" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xapnq")
sun = 100

[node name="BasicInventoryAbility" parent="." node_paths=PackedStringArray("inventory_container") instance=ExtResource("2_vufyr")]
size = 8
slot_scene = ExtResource("4_tpi5q")
inventory_container = NodePath("../SeedContainer")

[node name="SeedBankBG" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 511.0
offset_bottom = 90.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_1h3mi")

[node name="SeedContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = 19.0
offset_right = 575.0
offset_bottom = 159.0
columns = 8

[node name="SunCount" type="Label" parent="."]
layout_mode = 2
offset_left = 46.0
offset_top = 130.0
offset_right = 110.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 1
